--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.thymeleaf.cache=false
 #数据库连接
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://115.159.197.191:3306/oa_db?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/oa_db?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=335313703xh
+spring.datasource.password=123456
 
 mybatis-plus.configuration.map-underscore-to-camel-case=true
 mybatis-plus.configuration.auto-mapping-behavior=full
@@ -67,15 +67,13 @@ spring.activiti.check-process-definitions=false
 # activiti 当自动检查 并更新数据库接表不存在则进行创建
 spring.activiti.database-schema-update=false
 
-
 #监控地址端口
 management.server.port=7000
-
 #springboot2.0之后，在Http环境下将默认的endpoint只设置为info和health，要想开启其他的监控功能，需要手动配置
 management.endpoints.web.exposure.include=*
-
 #请求连接前缀 默认是/actuator
 management.endpoints.web.base-path=/actuator
+
 
 
 
